shorty: Small style fixes to prevent scrollbars when the list is empty.

--- a/css/shorty.css
+++ b/css/shorty.css
@@ -48,7 +48,7 @@ html input, html textarea {
 /* the shorty desktop, a canvas, contains all elements except of those pushed into the header */
 .shorty-desktop {
 	position: relative;
-	width: 100%;
+	width: 99%;
 	background: transparent;
 	text-align: left;
 	top: 3.3em;
@@ -196,8 +196,7 @@ html input, html textarea {
 	position: absolute;
 	left:6em;
 	top:8em;
-	width: 100%;
-	height: 100%;
+	width: 92%;
 	z-index: 2;
 	white-space: nowrap;
 	background: transparent;
